# matrixmult

./: README.md
CPU/dense-matmul/: README.md
CPU/dense-matmul/src/: CMakeLists.txt  main.cpp
CPU/dense-matmul/tester/: CMakeLists.txt  tester.cpp
CPU/sparse-matmul/: README.md
CPU/sparse-matmul/src/: CMakeLists.txt  main.cpp
GPU/histogram/: README.md
GPU/histogram/src/: main.cu
GPU/matmul/src/: CMakeLists.txt  main.cu
